--- a/计算机/学习计划.md
+++ b/计算机/学习计划.md
@@ -34,6 +34,23 @@
 
 ## 书籍
 
+### 问题
+
+- 如何在 github 上找到学习某方面知识的项目？
+- 找到项目后如何学习？
+
+### 核心技术
+
+> 做一个数据库，可以练习前三种技术。
+
+- 数据结构和算法
+
+- 网络编程和网络协议（TCP/IP）
+- 多线程编程
+- 中间件（数据库、缓存、消息队列）
+- Linux（核心 API，线程/进程之间的通信机制）
+- 分布式和微服务（降级、限流、熔断、链路追踪，告警）
+
 ### 计算机网络
 
 - 《[图解HTTP](https://book.douban.com/subject/25863515/)》
@@ -56,7 +73,7 @@
 - 《[Head First 设计模式（中文版）](https://book.douban.com/subject/2243615/)》
 - 《[反应式设计模式](https://book.douban.com/subject/30417742/)》
 
-### 算法
+### 数据结构与算法
 
 - 《[算法（第4版）](https://book.douban.com/subject/19952400/)》
 - 《[算法导论（原书第3版）](https://book.douban.com/subject/20432061/)》
