--- a/其他/找工作/八股文-面试题.md
+++ b/其他/找工作/八股文-面试题.md
@@ -101,343 +101,461 @@
 
 # Java 基础
 
-#### lava中的序列化和反序列化是什么？
+#### 451.Java 中的序列化和反序列化是什么？
 
+序列化就是将对象转换为字节流的过程，这样对象就可以进行网络传输和持久化存储等。
 
+反序列化就是将字节流重新转换为对象的过程，即从存储中读取数据并重新创建对象。
 
-#### 十么是Java中的不可变类
+#### 416.什么是 Java 中的不可变类？
 
+创建后不可修改的类，一旦对象被创建，它的所有属性都不能被更改。
 
+1. 声明类为 final。
+2. 声明所有字段为 private 和 final。
+3. 不提供相关的 set 方法。
 
-#### lava中Exception和Error有什么区别
+#### 417.Java 中 Exception 和 Error 有什么区别？
 
+Exception 和 Error 都是 Throwable 类的子类
 
+Exception 表示可以被处理的异常。具体又分为
 
-#### 尔认为Java的优势是什么
+编译器异常，必须被显式的处理。
 
+运行时异常，不需要被显式捕获。
 
+Error 表示系统级的不可恢复的错误，不应该被捕获或处理。
 
-#### 十么是Java的多态特性
+#### 410.你认为 Java 的优势是什么？
 
+1. Java 是跨平台的，可以做到一次编写多平台运行。
+2. 提供了垃圾回收功能，提升了开发效率。
+3. 丰富的生态，包括第三方类库、中间件和框架等。
+4. Java 是一种面向对象语言，利用代码的维护和扩展。
 
+#### 411.什么是 Java 的多态特性？
 
-#### lava中的参数传递是按值还是按引用
+多态是指同一个接口和父类引用变量可以指向不同的对象实例，根据实际的对象执行相应的方法。
 
+#### 412.Java 中的参数传递是按值还是按引用？
 
+是**值传递**。基本数据类型传递的是值的副本，引用数据类型传递的是引用的副本。
 
-#### 为什么Java不支持多重继承
+#### 414.为什么 Java 不支持多重继承？
 
+主要是因为多继承会产生菱形继承的问题，会产生歧义。
 
+#### 418.Java 面向对象编程与面向过程编程的区别是什么？
 
-#### lava面向对象编程与面向过程编程的区别是什么
+面向对象编程，就是把**类或对象**作为基本单元来组织代码。关注对象之间的关系和交互，可扩展性和复用性较好，适合大型项目。
 
+面向过程编程，就是把**函数**作为基本单元来组织代码。关注执行的步骤和顺序，开发简单，适合小型项目。
 
+#### 419.Java 方法重载和方法重写之间的区别是什么？
 
-#### lava方法重载和方法重写之间的区别是什么
+前者，允许在同一个类中有多个同名方法，只要参数列表不同。
 
+后者，子类在继承父类时，可以重写父类的某个方法，提供不同的实现。
 
+#### 420.什么是 Java 内部类？它有什么作用？
 
-#### 十么是Java内部类？它有什么作用
+包括成员内部类、静态内部类、匿名内部类和局部内部类。
 
+作用包括：
 
+1. 将逻辑相关的类封装在一起，提高类的内聚性。
+2. 内部类可以很方便的访问外部类的成员变量和方法。
+3. 对于只在一个地方使用的小类，可以简化代码。
+4. 匿名内部类可以广泛用于实现回调函数和事件监听。
 
-#### JDK8有哪些新特性？
+#### 421.JDK8 有哪些新特性？
 
+1. 用元空间代替了永久代。
+2. 引入了 Lambda 表达式。
+3. 引入了日期类。
+4. 引入了 Stream 流式接口。
+5. 引入了 CompletableFuture 类。
 
+#### 423.Java 中 String、StringBuffer 和 StringBuilder 的区别是什么？
 
-#### Java中String、StringBuffer和StringBuilder的区别是什么？
 
 
+#### 424.Java 的 StringBuilder 是怎么实现的？
 
-#### lava的StringBuilder是怎么实现的
 
 
+#### 425.Java 中包装类型和基本类型的区别是什么？
 
-#### lava中包装类型和基本类型的区别是什么
 
 
+#### 413.接口和抽象类有什么区别？
 
-#### 爱口和抽象类有什么区别
 
 
+#### 426.JDK 和 JRE 有什么区别？
 
-#### DK和JRE有什么区别？
 
 
+#### 427.你使用过哪些 JDK 提供的工具？
 
-#### 你使用过哪些JDK提供的工具
 
 
+#### 100.Java 中 hashCode 和 equals 方法是什么？它们与 == 操作符有什么区别？
 
-#### ava中hashCode和equals方法是什么？它们与==操作符有什么区别？
 
 
+#### 428.Java 中的 hashcode 和 equals 方法之间有什么关系？
 
-#### lava中的hashcode和equals方法之间有什么关系？
 
 
+#### 429.什么是 Java 中的动态代理？
 
-#### 么是Java中的动态代理
 
 
+#### 430.JDK 动态代理和 CGLIB 动态代理有什么区别？
 
-#### DK动态代理和CGLIB动态代理有什么区别
 
 
+#### 431.Java 中的注解原理是什么？
 
-#### lava中的注解原理是什么？
 
 
+#### 432.你使用过 Java 的反射机制吗？如何应用反射？
 
-#### 尔使用过Java的反射机制吗？如何应用反射
 
 
+#### 433.什么是 Java 的 SPI（ServiceProviderinterface）机制？
 
-#### 什么是Java的sPI（ServiceProviderinterface）机制
 
 
+#### 434.Java 泛型的作用是什么？
 
-#### lava泛型的作用是什么？
 
 
+#### 6306.Java 泛型擦除是什么？
 
-#### Java泛型擦除是什么？
 
 
+#### 435.什么是 Java 泛型的上下界限定符？
 
-#### 十么是Java泛型的上下界限定符
 
 
+#### 436.Java 中的深烤贝和浅烤贝有什么区别？
 
-#### lava中的深烤贝和浅烤贝有什么区别
 
 
+#### 437.什么是 Java 的 Integer 缓存池？
 
-#### 什么是Java的Integer缓存池
 
 
+#### 438.Java 的类加载过程是怎样的？
 
-#### ava的类加载过程是怎样的
+总的来看分为五个阶段：
 
+1. **加载**
+   - 将二进制流读入到内存中，生成一个 class 对象。
+2. **验证**
+   - 验证二进制流是否符合规范。
+3. **准备**
+   - 为静态变量赋初始值，也即在方法区中划分空间。
+4. **解析**
+   - 将常量池的符号引用转化为直接引用。
+5. **初始化**
+   - 执行一些静态代码块，为静态变量赋值。
 
+#### 440.什么是 Java 的 BigDecimal？
 
-#### 十么是Java的BigDecimal
 
 
+#### 441.使用 newString("yupi”）语句在 Java 中会创建多少个对象？
 
-#### 使用newString("yupi”）语句在Java中会创建多少个对象
 
 
+#### 442.Java 中 final、finally 和 finalize 各有什么区别？
 
-#### Java中final、finally和finalize各有什么区别？
 
 
+#### 443.为什么在 Java 中编写代码时会遇到乱码问题？
 
-#### 为什么在Java中编写代码时会遇到乱码问题
 
 
+#### 422.JDK9 中将 String 的 char 数组改为 byte 数组？
 
-#### JDK9中将String的char数组改为byte数组
 
 
+#### 825.如何在 Java 中调用外部可执行程序或系统命令？
 
-#### 如何在Java中调用外部可执行程序或系统命令
 
 
+#### 938.如果一个线程在 Java 中被两次调用 start() 方法，会发生什么？
 
-#### 如果一个线程在Java中被两次调用starto方法，会发生什么
 
 
+#### 941.栈和队列在 Java 中的区别是什么?
 
-#### 浅和队列在Java中的区别是什么
 
 
+#### 942.Java 的 Optional 类是什么？它有什么用？
 
-#### ava的Optional类是什么？它有什么用
 
 
+#### 943.Java 的 I/O 流是什么？
 
-#### ava的VO流是什么？
 
 
+#### 945.什么是 Java 的网络编程?
 
-#### 十么是Java的网络编程
 
 
+#### 948.Java 中的基本数据类型有哪些？
 
-#### lava中的基本数据类型有哪些
 
 
+#### 949.什么是 Java 中的自动装箱和拆箱？
 
-#### 十么是Java中的自动装箱和拆箱
 
 
+#### 988.什么是 Java 中的选代器（Iterator）？
 
-#### 十么是Java中的选代器（iterator）
 
 
+#### 989.Java 运行时异常和编译时异常之间的区别是什么？
 
-#### lava运行时异常和编译时异常之间的区别是什么
 
 
+#### 992.什么是 Java 中的继承机制？
 
-#### 十么是Java中的继承机制
 
 
+#### 993.什么是 Java 的封装特性？
 
-#### 十么是Java中的继承机制
 
 
+#### 994.Java 中的访问修饰符有哪些？
 
-#### 十么是Java的封装特性？
 
 
+#### 995.Java 中静态方法和实例方法的区别是什么？
 
-#### lava中的访问修饰符有哪些
 
 
+#### 990.Java 中 for 循坏与 foreach 循坏的区别是什么？
 
-#### ava中静态方法和实例方法的区别是什么
 
 
+#### 439.什么是 Java 中的双亲委派模型？
 
-#### ava中for循坏与foreach循坏的区别是什么
+是类加载机制的设计模式之一，核心思想是：类加载器在加载某个类时，会先委派给父类加载器去加载，如果无法加载，才会由当前加载器去加载。
 
+#### 5900.Java 中 wait() 和 sleep() 的区别？
 
 
-#### 十么是Java中的双亲委派模型
 
+#### 5907.Java 和 Go 的区别?
 
 
-#### ava中waito和sleepo的区别
 
+#### 5908.Java Obiect 类中有什么方法，有什么作用?
 
 
-#### Java和Go的区别
 
+#### 5909.Java 中的字节码是什么?
 
 
-#### lavaObiect类中有什么方法，有什么作用
 
+#### 166.什么是 BIO、NIO、AIO？
 
 
-#### lava中的字节码是什么
 
+#### 718.什么是 Channel？
 
 
-#### 十么是BIO、NIO、AIO？
 
-
-
-#### 什么是Channel？
-
-
-
-#### 什么是Selector？
+#### 720.什么是 Selector？
 
 
 
 # Java 集合
 
-#### 说说Java中HashMap的原理
+#### 6319.说说 Java 中 HashMap 的原理？
 
+HashMap 是基于哈希表的数据结构，用来存储**键值对**，通过**数组 + 链表 + 红黑树**来处理哈希冲突。使用键的 hashCode() 方法计算哈希值，并通过 (n - 1) & hash 来确定元素在数组中的索引。默认初始容量为 16，负载因子为 0.75，当元素数量超过 12个时，容量会扩容到原来的两倍，并重新分配元素的位置。
 
+#### 4948.使用 HashMap 时，有哪些提升性能的技巧？
 
-#### 使用HashMap时，有哪些提升性能的技巧
+1. 合理设置初始容量，避免频繁的扩容操作。
+2. 调整负载因子，使得满足具体应用场景的需要。
+3. 使用高质量的哈希函数，确保哈希值均匀分布。
 
+#### 4947.什么是 Hash 碰撞？怎么解决哈希碰撞？
 
+有几种方法。
 
-#### 十么是Hash碰撞？怎么解决哈希碰懂
+1. **拉链法**
+   - 将每个槽的位置变成一个链表，哈希值相同的键存储在同一个链表中。
+2. **开放寻址法**
+   - 出现碰撞，在寻找下一个可用位置。
+3. **再哈希法**
+   - 出现碰撞时，使用第二个哈希函数来计算新的索引位置。
 
+#### 4946.Java 的 CopyOnWriteArrayList 和 Collections.synchronizedList 有什么区别？分别有什么优缺点？
 
+前者是一个线程安全的 List 实现，特性就是写时复制。
 
-#### 的CopyOnWriteArrayList和Collections.synchronizedList有什么区别？分别有什么优缺点
+优点：
 
+- 读操作无锁，每次写操作都会创建并复制新数组，所以读写不冲突，能提供非常高效的并发读性能。
 
+缺点：
 
-#### ava中有哪些集合类？请简单介绍
+- 写操作开销大，内存消耗大。
 
+后者是一个包装方法，通过对每个方法加锁，来保证线程安全。
 
+优点：
 
-#### 数组和链表在Java中的区别是什么
+- 简单、方便。
 
+缺点：
 
+- 并发性能低。
 
-#### lava中的List接口有哪些实现类
+#### 444.Java 中有哪些集合类？请简单介绍？
 
+主要分为两大类：Collection 接口和 Map 接口，前者存储对象，后者存储键值对。
 
+Collection 接口又分为 List 接口、Set 接口、Queue 接口。
 
-#### 中ArravList和LinkedList有什么区别？
+**List 接口下的实现类为：**
 
+ArrayList：基于动态数组，查询速度快。
 
+LinkedList：基于双向链表，插入、删除速度快。
 
-#### avaArrayList的扩容机制是什么
+CopyOnWriteArrayList：线程安全，基于动态数组，写操作开销大，适合读多写少的场景。
 
+**Set 接口下的实现类为：**
 
+HashSet：基于哈希表，元素无序，键唯一，键可以为 null。
 
-#### lava中的HashMap和Hashtable有什么区别
+TreeSet：基于红黑树，元素有序，键唯一，键不能为 null。
 
+LinkedHashSet：基于链表和哈希表，元素有序，键唯一，键可以为 null。
 
+**Queue 接口下的实现类为：**
 
-#### ava中的HashSet和HashMap有什么区别
+PriorityQueue：基于优先级堆，优先级队列，元素按照指定的比较器排序。
 
+ArrayDeque：基于动态数组，双端队列，提供栈的操作方法，不允许值为 null。
 
+**Map 接口下的实现类为：**
 
-#### Java中HashMap的扩容机制是怎样的？
+HashMap：基于哈希表，键值对无序，键唯一，键和值都可以为 null。适用于需要高性能的场景。
 
+LinkedHashMap：基于链表和哈希表，键值对有序，键唯一，键和值都可以为 null。适用于需要保持键的插入顺序或访问顺序的场景。
 
+ConcurrentHashMap：线程安全，基于哈希表，键值对无序，键唯一，键和值为都不能为 null，适用于高并发环境。
 
-#### 为什么HashMap在Java中扩容时采用2的n次方倍
+TreeMap：基于红黑树，键值对有序，键唯一，键不能为 null，值可以为 null。适用于需要根据键来排序的场景。
 
+HashTable（老旧，尽量不使用）：线程安全，基于哈希表，键值对无序，键唯一，键和值为都不能为 null。
 
+#### 445.数组和链表在 Java 中的区别是什么？
 
-#### 为什么Java中HashMap的默认负载因子是0.75？
+数组基于连续的内存块，大小是固定的。支持 O(1) 时间的随机访问，插入和删除需要移动数据，时间复杂度为 O(n)。可以用来实现缓存、表格等数据结构。
 
+链表基于不连续的节点，大小可以动态变化。访问元素需要 O(n) 时间，插入和删除时间复杂度为 O(1)。可以用来实现队列，栈等数据结构。
 
+#### 446.Java 中的 List 接口有哪些实现类？
 
-#### 为什么JDK1.8对HashMap进行了红黑树的改动
+List 接口主要包含 ArrayList、LinkedList、CopyOnWriteArrayList 几个实现类。
 
+#### 9180.Java 中 ArrayList 和 LinkedList 有什么区别？
 
+LinkedList 基于双向链表实现。ArrayList 基于动态数组实现，随机访问时间复杂度为 O(1)，插入和删除时间复杂度为 O(n)，LinkedList 与之相反。
 
-#### DK1.8对HashMap除了红黑树还进行了哪些改动？
+#### 9179.Java ArrayList 的扩容机制是什么？
 
+ArrayList 的初始容量为 10。当发生扩容时，ArrayList 会创建一个新数组，其容量为原数组的 1.5 倍，然后将原数组中的元素复制到新数组中。
 
+#### 448.Java 中的 HashMap 和 Hashtable 有什么区别？
 
-#### lava中的LinkedHashMap是什么？
+HashMap 是线程不安全的，没有线程同步开销，允许键或值为 null。
 
+Hashtable 是线程安全的，由于方法的同步锁机制，性能低于 HashMap，不允许键或值为 null。
 
+#### 9806.ConcurrentHashMap 和 HashTable 的区别是什么？
 
-#### lava中的TreeMap是什么
+HashTable 使用的是单一的锁机制，即对整个哈希表进行同步，效率较低。
 
+ConcurrentHashMap 采用了 CAS + synchronized 的方式，仅锁住特定的冲突节点，锁的粒度更细，性能较高。
 
+#### 449.Java 中的 HashSet 和 HashMap 有什么区别？
 
-#### lava中的ldentityHashMap是什么
+HashSet 基于 HashMap 来实现，仅操作 HashMap 中键的部分，用于存储唯一元素。
 
+HashMap 用来存储键值对，键唯一，值可以重复。
 
+#### 451.Java 中 HashMap 的扩容机制是怎样的？
 
-#### Java中的WeakHashMap是什么？
+扩容是基于**负载因子**来决定的，默认为 0.75。也就是说，元素数量超过容量的 75% 时，会触发扩容。触发扩容时，容量会扩大为原来的**两倍**。且需要重新计算所有元素的哈希值，并将它们重新分配到新的哈希桶中。
 
+#### 452.为什么 HashMap 在 Java 中扩容时采用 2 的 n 次方倍？
 
+主要是为了提高哈希值的**分布均匀性**和哈希计算的**效率**。只有容量为 2 的 n 次方时，才能将 hash % n 转换为 (n - 1) & hash，而**位运算的效率高于取模运算**。
 
-#### Java中ConcurrentHashMap1.7和1.8之间有哪些区别
+#### 453.为什么 Java 中 HashMap 的默认负载因子是 0.75？
 
+避免过多扩容的同时，也保证了不会出现过多的哈希冲突。为了在**时间复杂度**和**空间复杂度**之间取得平衡。
 
+#### 455.为什么 JDK 1.8 对 HashMap 进行了红黑树的改动？
 
-#### Java中ConcurrentHashMap的get方法是香需要加锁？
+当哈希冲突较多时，链表中的元素增多，查找、插入和删除的时间复杂度从 O(1) 退化为 O(n)，效率较低。
 
+链表长度大于等于 8 时转换为红黑树，小于等于 6 时退化为链表。红黑树是一种平衡二叉搜索树，查找、插入和删除的时间复杂度为 O(logn)，在元素多的情况下，效率远优于链表。
 
+#### 456.JDK 1.8 对 HashMap 除了红黑树还进行了哪些改动？
 
-#### 为什么Java的ConcurrentHashMap不支持key或value为nullg
+1. **改进了哈希函数的计算**，使得哈希值分布更加均匀。
+2. **优化了扩容机制**，不再对每个元素计算哈希值。
+3. **头插法变成尾插法**，避免死循环。
 
+#### 457.Java 中的 LinkedHashMap 是什么？
 
+继承自 HashMap 并且保留了键值对的插入顺序或访问顺序，内部通过维护一个双向链表来实现。
 
-#### lava中的CopyOnWriteArrayList是什么
+#### 458.Java 中的 TreeMap 是什么？
 
+基于红黑树实现，可以通过自定义比较器，使得节点根据你定义的规则进行排序。
 
+#### 459.Java 中的 ldentityHashMap 是什么？
 
-#### 你遇到过ConcurrentModificationException错误吗？它是如何产生的
+是 Map 接口的一个实现类，使用引用相等性作为键的比较方式。只有两个键的引用相同时，才被认为是相同的键。
 
+#### 460.Java 中的 WeakHashMap 是什么？
 
+是一个特殊的 Map 实现，它使用**弱引用**作为键。当一个键不再被其他对象引用时，会自动删除与该键相关的条目。
+
+#### 461.Java 中 ConcurrentHashMap 1.7 和 1.8 之间有哪些区别？
+
+JDK 1.7 采用的是**分段锁**，而 JDK 1.8 移除了分段锁，只在节点级别上进行加锁。进一步减少了锁的竞争，并发度大大增加。
+
+#### 462.Java 中 ConcurrentHashMap 的 get 方法是否需要加锁？
+
+不需要加锁，通过 volatile 关键字，ConcurrentHashMap 能够确保 get 方法的线程安全。即时在写入发生时，读取线程仍然能够获取最新的数据。
+
+#### 463.为什么 Java 的 ConcurrentHashMap 不支持 key 或 value 为 null？
+
+为了避免混淆和潜在的并发问题，同时简化实现。使用 get(key) 方法时，如果返回值为空，无法区分是 key 不存在，还是 value 为 null。
+
+#### 464.Java 中的 CopyOnWriteArrayList 是什么？
+
+是一个线程安全的动态数组实现。通过写时复制机制，即在每次写入操作时，复制原始数组的内容，修改副本。读取的是原始数组，所以读操作无锁。写操作完成后，将新数组代替旧数组。
+
+#### 465.你遇到过 ConcurrentModificationException 错误吗？它是如何产生的？
+
+它通常在集合被遍历的时候，出现修改操作时被抛出。是为了保证集合迭代时语义的一致性。
 
 # Java 并发
 
@@ -458,37 +576,41 @@
 
 在 Java 19 中通过 Project Loom 引入了协程，并在 Java 21 中确认。
 
-#### 501.什么是 Java 内存模型（JVM）？
-
-
-
-#### 502.什么是 Java 中的原子性、可见性和有序性？
-
-
-
-#### 503.什么是 Java 的 happens-before 规则？
-
-
-
-#### 504.什么是 Java 中的指令重排？
-
-
-
 #### 478.什么是 Java 的 Timer？
 
-
-
-#### 500.什么是 Java 的 CAS（Compare-And-Swap）操作？
-
-
-
-#### 520.什么是 Java 中的 ABA 问题？
-
-
+是一个用于调度任务的工具类，用来周期性执行任务或定时执行任务。
 
 #### 498.说说 AQS 吧？
 
+AbstractQueuedSynchronizer（抽象队列同步器），就是起到了一个抽象和封装的作用，将一些排队、入队、加锁、中断等方法提供出来，便于其他相关的 JUC 锁的使用，具体加锁时机、入队时机等都需要实现类自己控制。
 
+#### 500.什么是 Java 的 CAS（Compare-And-Swap）操作？
+
+是一种**硬件级别的原子操作**，它比较某个只是否是预期值，如果是，则更新为新值，否则不做修改。
+
+#### 501.什么是 Java 内存模型（JVM）？
+
+是 Java 虚拟机定义的一种规范，规范了线程何时会从主内存中读取数据，何时会把数据写回到主内存中。
+
+目的是确保多线程环境下的**可见性、有序性和原子性**。
+
+#### 502.什么是 Java 中的原子性、可见性和有序性？
+
+1. 原子性指一个或一系列操作要么全部执行成功，要么全部不执行。
+2. 可见性指当一个线程修改了某个共享变量的值，其他线程能立即看到这个修改。
+3. 有序性指程序的执行顺序和代码的执行顺序一致。
+
+#### 503.什么是 Java 的 happens-before 规则？
+
+他通过定义一系列操作之间的执行顺序，确保线程间的操作是有序的。
+
+#### 504.什么是 Java 中的指令重排？
+
+是指为了优化性能，在保证单线程语义不变的情况下，对指令执行顺序进行调整的过程。
+
+#### 520.什么是 Java 中的 ABA 问题？
+
+是指在多线程环境下，某个变量的值经历了从 A 到 B 再到 A 的变化，可能会被线程误认为该值没有变化，从而导致错误的判断和操作。
 
 ## 同步与异步、通信
 
@@ -578,53 +700,92 @@ notifyAll()：唤醒所有调用 wait() 等待的线程。
 
 #### 514.为什么 Netty 不使用 Threadlocal 而是自定义了一个 FastThreadlocal？
 
-
+1. Threadlocal 的实现使用了弱引用，而 FastThreadlocal 的实现更轻量级，减少了内存分配的开销。
+2. 使用了更高效的数据结构来存储线程局部变量，从而提供高快的访问速度。
+3. 提供了更好的线程隔离和数据隐私，防止线程之间的数据污染。
 
 #### 515.什么是 Java 的 TransmittableThreadLocal？
 
-
+是一种扩展了 Java 的 Threadlocal 的功能的类，主要解决了在多线程环境下，如何将局部变量从一个线程传递到另一个线程的问题。
 
 #### 516. Java中 Thread.sleep（o）的作用是什么？
 
+使得 CPU 资源短暂的空闲出来让别的线程有机会得到 CPU 资源。
 
+#### 5918.Java 中 Thread.sleep 和 Thread.yield 的区别？
 
-#### 5918.Java 中 Thread.sleep 和 Thread.vield 的区别？
+Thread.sleep 使线程进入阻塞状态，让出 CPU 资源。
 
-
+Thread.yield 线程依然处于 RUNNABLE 状态，提示当前线程愿意让出 CPU 资源，操作系统的线程调度器可以忽略。
 
 ## 线程池
 
 #### 472.你了解 Java 线程池的原理吗？
 
+线程池是一种池化技术，用于预先创建并管理一组线程，避免频繁创建和销毁线程的开销。
 
+工作原理：
+
+1. 任务提交后创建线程。
+2. 核心线程满了之后，将任务提交到工作队列。
+3. 工作队列满了之后新增线程，直到最大线程数。
+4. 线程数满了，工作队列也满了，来新任务后会执行拒绝策略。
+5. 如果线程空闲时间超过了空闲存活时间，并且线程数超过了核心线程数，则销毁线程直到核心线程数。
 
 #### 474.如何合理地设置 Java 线程池的线程数？
 
+CPU 密集型：CPU 核心数 + 1
 
+I/O 密集型：CPU 核心数 * 2
 
 #### 475.Java 线程池有哪些拒绝策略？
 
+默认是抛出异常，或者有调用者线程执行，或者删除最早提交的任务，或者直接丢弃。
 
+还可以自定义，实现 RejectedExecutionHandler 类的 rejectedExecution 的方法。
 
 #### 476.Java 并发库中提供了哪些线程池实现？它们有什么区别？
 
+Executors 类提供了五种静态工厂方法用于创建不同类型的线程池。
 
+FixedThreadlocal 线程数固定。适合负载稳定、任务数量确定的场景。
+
+CachedThreadlocal 线程数量没有上限，空闲线程会在 60 秒后被回收。适合短期大量并发任务的场景。
+
+SingleThreadlocal 只有一个线程处理任务。适合需要保证任务按顺序执行的场景。
+
+ScheduledThreadlocal 处理完自己的任务后去其他线程的队列中窃取任务。适合大量小任务并行执行。
 
 #### 5931.Java 线程池核心线程数在运行过程中能修改吗？如何修改？
 
-
+可以使用 ThreadPoolExecutor.setCorePoolSize() 方法动态修改核心线程数，不会中断现有任务。
 
 #### 5901.Java 线程池中 shutdown 与 shutdownNow 的区别是什么？
 
+>**线程池生命周期：**
+>**运行状态**（RUNNING）：线程池可以接受新任务并处理已提交的任务。
+>**关闭状态**（SHUTDOWN）：通过调用shutdown() 进入，该状态下线程池不再接受新任务，
+>但会继续执行已有的任务
+>**停止状态**（STOP）：通过调用shutdownNow() 进入，该状态下线程池会试图中断所有正在执
+>行的任务并清空任务队列。
+>**终止状态**（TERMINATED）：所有任务执行完毕且线程池完全关闭后，线程池进入
+>TERMINATED状态。
 
+shotdown() 启动线程池的平滑关闭。不再接受新任务，但会继续执行已提交的任务。
+
+shotdownNow() 启动线程池的强制关闭。尝试定制所有正在执行的任务。
 
 #### 5896.Java 线程池内部任务出异常后，如何知道是哪个线程出了异常？
 
+提交任务时使用 submit() 方法，而不是 execute() 方法。这样可通过 Future 对象捕获异常。
 
+#### 477.Java 中的 DelayQueue 和 ScheduledThreadPool 有什么区别？
 
-#### 477.Java 中的 DelavQueue 和 ScheduledThreadPool 有什么区别？
+核心原理差不多，实现优先级队列的方式不一样。
 
+DelayQueue 是阻塞队列，通过 PriorityQueue 来实现优先级队列。
 
+ScheduledThreadPool 是线程池，通过 RunnableScheduledFuture 来实现优先级队列。
 
 ## 线程安全
 
@@ -632,261 +793,526 @@ notifyAll()：唤醒所有调用 wait() 等待的线程。
 
 **线程安全**是指多个线程访问共享资源时，能够保证一致性和正确性。即无论线程如何交替执行，程序都能产生预期的结果。
 
-#### 6304.在 Java 中主线程如何知晓创建的子线程是否执行成功？
-
-
-
 #### 505.Java 中的 final 关键字是否能保证变量的可见性？
 
-
+不可以。在并发情况下的可见性是指一个线程修改了共享变量，另一个线程可以立马得知修改，得到最新修改后的值。 valitile 才可以保证这种情况。
 
 #### 519.Java 中 volatile 关键字的作用是什么？
 
+保证变量的可见性和禁止指令重排序优化。
 
+#### 6304.在 Java 中主线程如何知晓创建的子线程是否执行成功？
+
+1. 使用 Thread.join() 
+2. 使用 Callable 和 Future 类
+3. 使用回调机制
+4. 使用 CountDownLatch 类
 
 ## 锁
 
-#### 497.Java 中 ReentrantLock 的实现原理是什么？
+#### 491.synchronized 和 Reentrantlock 有什么区别？
 
+synchronized 是 Java 内置的关键字，实现基本的同步机制。
 
+ReentrantLock 是 JUC 类库提供的，支持的功能比较多。
+
+简单情况下用 synchronized 就可以，复杂情况下用 ReentrantLock。
 
 #### 492.Java 的 synchronized 是怎么实现的？
 
+**synchronized 修饰方法时**，方法的常量池会增加一个 ACC_SYNCHRONIZED 标志，当某个线程访问这个方法时，检查是否有这个标志。如果有，则需要获得监视器锁，才可执行方法。
 
+**synchronized 修饰代码块时**，会在代码块的前后插入 monitorenter 和 monitorexit 字节码指令，来实现同步。
 
 #### 493.Java 中的 synchronized 轻量级锁是否会进行自旋？
 
-
+轻量级锁 CAS 失败了之后，不会有自旋操作，会直接进入重量级锁膨胀过程。
 
 #### 494.当 Java 的 synchronized 升级到重量级锁后，所有线程都释放锁了，此时它还是重量级锁吗？
 
-
+当重量级锁释放后，锁对象是无锁的。有新的线程来竞争的话又会从轻量级锁开始。
 
 #### 495.什么是 Java 中的锁自适应自旋？
 
+> **操作系统的同步原语**：
+>
+> **互斥量（Mutex）**：用于保护共享资源，保证同一时刻只有一个线程访问资源。
+>
+> **信号量（Semaphore）**：用于控制多个线程对资源池的访问，适用于有限资源的并发控制。
+>
+> **读写锁（Read-Write Lock）**：用于读多写少的场景，允许并发读，串行写。
+>
+> **条件变量（Condition Variable）**：用于线程间的等待和通知机制。
+>
+> **屏障（Barrier）**：确保多个线程在某一时刻同步执行。
+>
+> **事件（Event）**：线程间的通知机制，用于等待和响应特定条件。
+>
+> **原子操作（Atomic）**：不可分割的操作，用于实现无锁算法和高效的线程间同步。
 
+是 Java 中锁优化的一种机制，用于减少线程在**竞争锁时频繁挂起和恢复的开销**。
 
-#### 491.synchronized 和 Reentrantlock 有什么区别？
-
-
+原理：在锁争用较少的情况下，线程在进入等待状态前，先执行一段自旋操作，而不是立刻挂起线程。
 
 #### 496.如何优化 Java 中的锁的使用？
 
+1. **减少锁的粒度**，比如将一个大对象锁拆分成多个小对象锁，还有对于读多写少的场景使用读写锁。
+2. **减少锁的使用**，比如使用 ThreadLocal 来代替共享变量，使用原子类来避免使用锁。
 
+#### 497.Java 中 ReentrantLock 的实现原理是什么？
+
+基于 AQS 实现的一个可重入锁。利用 CAS 修改 state 来争抢锁，争抢不到则进入同步队列等待，条件不满足则进入等待队列等待。
 
 #### 499.你了解 Java 中的读写锁吗？
 
+读写锁分为读锁和写锁。
 
+**读锁**：是共享锁，允许多个线程同时获取读锁。
+
+**写锁**：是独占锁，当有线程获取写锁时，其他线程既不能获取写锁，也不能获取读锁。
 
 #### 518.Java 中什么情况会导致死锁？如何避免？
 
+1. 互斥条件
+   - 每个资源只能被一个线程占用。
+2. 占有和等待
+   - 线程在持有一个资源的同时，等待获取其他资源。
+3. 不可抢占
+   - 线程获取的资源在未使用完毕前不能被其他线程抢占。
+4. 循环等待
+   - 多个线程形成一种头尾相接的等待资源的关系。
 
+避免死锁的方法
+
+- 按序申请资源
+- 减少锁的范围
+- 使用尝试锁机制
+- 设置超时等待时间
+- 避免嵌套锁
 
 ## 并发工具类
 
 #### 480.你使用过哪些 Java 并发工具类？
 
+ConcurrentHashMap, Atomicinteger等
 
+ConcurrentHashMap 
+
+- 是一个现成安全的哈希表，用法和哈希表差不多。
+
+Atomicinteger
+
+- 提供了对 int 类型的线程安全的原子操作，比如增减和比较。
 
 #### 481.什么是 Java 的 Semaphore？
 
-
+是一个同步工具类。可以限制同时访问特定资源的线程数量。
 
 #### 482.什么是 Java 的 CyclicBarrier？
 
-
+是一个同步工具类。允许一组线程在执行某个任务时相互等待，直到所有线程都到达屏障之后才继续执行。
 
 #### 483.什么是 Java 的 CountDownLatch？
 
-
+是一个同步工具类。允许一个或多个线程等待，直到其他线程中执行的一组操作完成。
 
 #### 484.什么是 Java 的 StampedLock？
 
-
+是一个锁机制，通过引入乐观读锁和时间戳的概念，提高了读写性能。
 
 #### 485.什么是 Java 的 CompletableFuture？
 
+是一个异步编程工具，可以通过链式调用来组合异步操作。
 
+#### 486.什么是 Java 的 ForkJoinPool？
 
-#### 486.什么是 Java 的 ForkJoinPool3？
+是一个专门用于并行执行任务的线程池，核心机制为分解和合并。
 
+- **Fork（分解）**：任务被递归分解为更小的子任务。
+- **Join（合并）**：子任务执行完毕后将结果合并。
 
+算法：空闲线程会从繁忙线程的工作队列中**窃取**未完成的任务，以保持资源的高效利用。
 
 ## 场景
 
 #### 479.你了解时间轮（TimeWheel）吗？有哪些应用场景？
 
+是一种用于管理和调度**大量定时任务**的数据结构，它是一种高效的定时任务调度算法。
 
+- 网络服务器中用来处理连接超时和请求超时等。
+- 分布式系统中用来协调不同节点的定时任务。
 
 #### 488.你使用过 Java 中的哪些阻塞队列？
 
+当队列满了插入操作会被阻塞，当队列空了获取操作会被阻塞。常用于实现**生产者和消费者**场景。
 
+- ArrayBlockingQueue：一个有界队列，底层基于数组实现。
+- LinkedBlockingQueue：允许可选的界限，底层基于链表实现。
 
 #### 489.你使用过 Java 中的哪些原子类？
 
+1. AtomicInteger：用于操作整数的原子类，提供自增、自减和加法等操作。
+2. AtomicReference：用于操作对象引用的原子类，支持对原子对象的引用更新。
 
+#### 490.你使用过 Java 的累加器吗？
 
-#### 490.你使用过 Java 的素加器吗？
+LongAdder：适用于 Long 类型的累加操作。
 
-
+DoubleAdder：适用于 Double 类型的累加操作。
 
 # Java 虚拟机
 
-#### lava 中有哪些垃圾回收算法
+> #### STW
+>
+> *是一种 JVM 机制，用于在执行某些操作时暂停所有应用线程，从而确保 JVM 在不被干扰的情况下完成某些关键操作。*
+>
+> 
+>
+> #### TLAB（Thread-Local Allocation Buffer）
+>
+> ***TLAB** 是 **Thread-Local Allocation Buffer** 的缩写，意为**线程本地分配缓冲区**。TLAB 是一种分配在年轻代 Eden 区域中的内存空间，用于减少多线程分配对象时的竞争，提升对象分配的效率。*
+>
+> #### 工作原理：
+>
+> - *每个线程在 Eden 区域中分配一块私有的 TLAB 空间，这块内存仅供该线程使用。*
+> - *当线程需要分配对象时，直接在自己的 TLAB 中分配，无需进行同步操作，这样可以减少锁竞争并提升分配速度。*
+> - *当 TLAB 的空间耗尽时，线程会申请一个新的 TLAB。如果 Eden 区域内存不足，可能会触发 Minor GC（小规模垃圾回收）。*
+>
+> #### 优点：
+>
+> - ***减少锁竞争**：由于每个线程都有自己的分配缓冲区，分配对象不需要锁，避免了多线程同时访问 Eden 区时的同步开销。*
+> - ***提升分配速度**：TLAB 使得对象分配基本上变为线程本地的操作，相当于一种栈分配，因此速度接近原生的栈分配。*
+>
+> #### TLAB 使用的场景：
+>
+> *TLAB 适用于年轻代的对象分配，尤其是频繁创建短生命周期的对象场景，例如临时变量、局部对象等。这些对象往往会在年轻代快速分配和回收。*
+>
+> 
+>
+> ### PLAB（Promotion Local Allocation Buffer）
+>
+> ***PLAB** 是 **Promotion Local Allocation Buffer** 的缩写，意为**晋升本地分配缓冲区**。PLAB 用于优化对象从年轻代晋升到老年代时的分配效率，减少在老年代分配对象的开销。*
+>
+> #### 工作原理：
+>
+> - *在垃圾回收过程中（特别是 Minor GC），当对象在年轻代存活时间较长或空间不足时，可能会晋升到老年代。*
+> - *为了避免多个对象同时晋升到老年代时产生的竞争，JVM 为每个垃圾回收线程分配一个 PLAB 空间。*
+> - *每个垃圾回收线程在执行晋升时，先在自己的 PLAB 中分配空间，不需要与其他线程竞争。如果 PLAB 空间不足，则会申请新的 PLAB。*
+>
+> #### 优点：
+>
+> - ***提升晋升效率**：PLAB 将对象晋升到老年代时的分配变成了线程本地操作，避免了 GC 线程间的竞争。*
+> - ***减少 GC 线程间的锁竞争**：在多线程 GC 中，每个 GC 线程都有独立的 PLAB，从而在分配老年代空间时减少了锁竞争和等待时间。*
+>
+> #### PLAB 使用的场景：
+>
+> *PLAB 主要用于垃圾回收过程中晋升存活对象时的分配，适合应用于老年代对象分配，尤其是在对象晋升频繁的场景下。*
 
+## 内存
 
+#### 523.JVM 的内存区域是如何划分的？
 
-#### JVM的TLAB（Thread-LocalAllocation Buffer）是什么
+1. **虚拟机栈**（JVM Stack）
+   - 线程私有。用来存放局部变量表、操作数栈、常量池引用，方法出口信息等。
+2. **堆**（Heap）
+   - 线程共享。用来存放对象和数组，是垃圾回收的主要区域。
+3. **方法区**（Method Area）
+   - 线程共享。用来存放类信息、常量、静态变量、JIT 编译后的代码。
+4. **本地方法栈**（Native Method Stack）
+   - 线程私有。用来存放本地接口对应的代码。
+5. **程序计数器**（Program Counter Register）
+   - 线程私有。用来存放字节码指令的地址和行号。
 
+除此之外，还有一个 JVM 之外的**直接内存**（Direct Memory）。
 
+- 由 NIO 库通过 ByteBuffer 直接分配的内存，不受堆内存大小限制。
 
-#### lava是如何实现跨平台的？
+#### 524.Java 中堆和栈的区别是什么？
 
+栈（Stack）：用来存储局部变量和方法的调用信息。在方法执行期间局部变量被创建在栈上，在方法结束时被销毁。
 
+堆（Heap）：用来存储对象实例和数组。
 
-#### 编译执行与解释执行的区别是什么？JVM使用哪种方式
+#### 525.什么是 Java 中的直接内存？
 
+是由操作系统分配的内存区域，不受 JVM 堆内存管理限制，可以绕过垃圾回收机制，直接与本地系统内存交互。
 
+#### 526.什么是 Java 中的常量池？
 
-#### VM的内存区域是如何划分的
+是一块用来存储运行是的常量和符号的区域，主要包括**运行时常量池**和**字符串常量池**。
 
+作用：
 
+- 用于减少对象的重复创建，节省内存并提高效率。
 
-#### lava中堆和栈的区别是什么
+#### 527.你了解 Java 的类加载器吗？
 
+作用：
 
+1. **动态加载类**：在运行时根据需要加载类，而不是在编译时加载所有类。
+2. **隔离不同的类命名空间**：通过不同的类加载器可以隔离不同类。
 
-#### 什么是Java中的直接内存
+#### 529.什么是 Java 的 JIT（Just-In-Time）？
 
+是一种**在程序运行时将字节码编译为机器码的技术**。减少解释执行的开销，使得 Java 代码接近本地代码的性能。
 
+#### 530.什么是 Java 的 AOT（Ahead-Of-Time）？
 
-#### 什么是Java中的常量池？
+提前编译，是一种在程序运行之前，将字节码直接编译为机器码的技术。可以提高程序启动速度。
 
+#### 531.你了解 Java 的逃逸分析吗？
 
+是 Java 编译器的优化技术，即分析对象是否会逃逸出当前**方法或线程的作用范围**。如果不会逃逸，则可以实现**栈上分配、标量替换、同步消除**等优化。
 
-#### 尔了解Java的类加载器吗
+#### 532.Java 中的强引用、软引用、弱引用和虚引用分别是什么？
 
+强引用：垃圾回收器不会回收强引用指向的对象。
 
+软引用：系统内存不足时才会回收软引用指向的对象，适用于缓存。
 
-#### 什么是Java中的川（Just-in-Time）
+弱引用：垃圾回收器会立即回收弱引用指向的对象，适合防止内存泄漏。
 
+虚引用：仅用于跟踪对象的回收。
 
+## 垃圾收集器
 
-#### 十么是Java的AOT（Ahead-Of-Time）
+#### 538.Java 中有哪些垃圾回收算法
 
+标记-清除（Mark-Sweep）：首先遍历堆中的对象，标记出所有存活的对象，最后清除未标记的对象。
 
+标记-复制（Mark-Copying）：将内存分为两半，将存活的对象从一半复制到另一半，清除原区域的所有对象。
 
-#### 你了解Java的逃逸分析吗？
+标记-整理（Mark-Compact）：首先标记出所有存活的对象，将它们往边界整理，最后清除为标记的对象。
 
+#### 543.JVM 的 TLAB（Thread-LocalAllocation Buffer）是什么
 
+是 JVM 中为每个线程分配的一小块堆内存，避免多线程竞争共享堆内存，加速内存分配。
 
-#### lava中的强引用、软引用、弱引用和虚引用分别是什么
+#### 521.Java 是如何实现跨平台的？
 
+Java 程序在编译后生成字节码文件，对应的操作系统都有各自实现的 JVM，负责将字节码翻译为特定平台的机器码并执行。
 
+#### 9807.JVM 有哪些部分组成？
 
-#### lava中常见的垃圾收集器有哪些
+主要由类加载器、运行时数据区、执行引擎、本地方法接口组成。
 
+#### 522.编译执行与解释执行的区别是什么？JVM 使用哪种方式
 
+**编译执行**：在程序执行之前，通过编译器将源代码编译成机器码，然后直接在 CPU 上运行。
 
-#### lava中如何判断对象是否是垃圾？不同垃圾回收方法有付区别
+**解释执行**：在程序运行时，通过编译器将源代码逐行翻译并执行。
 
+JVM 采用编译执行和解释执行相结合的方式。程序初次运行时，通过 JVM 逐行解释执行字节码。之后，在程序运行时，通过 **JIT（即时编译器）将热代码**编译为机器码，避免反复解释，提高性能。
 
+#### 533.Java 中常见的垃圾收集器有哪些？
 
-#### 为什么Java的垃圾收集器将堆分为老年代和新生代
+新生代垃圾收集器：
 
+1. Serial 收集器
+   - 适用于单线程应用和客户端模式
+2. ParNew 收集器
+   - 适用于多线程环境，通常配合 CMS 使用。
+3. Parallel Scavenge 收集器
+   - 适用于大规模运算密集型后台任务，适合对吞吐量要强较高的场景。
 
+老年代垃圾收集器：
 
-#### 为什么Java8移除了永久代（PermGen）并引入了元空间（Metaspace）
+1. Serial Old 收集器
+   - 适合单线程、低内存使用场景
+2. Parallel Old 收集器
+   - 适合大规模并行计算场景
 
+3. CMS 收集器
+   - 适用于对响应时间要求较高的平台
+4. G1 收集器
+   - 用于取代 CMS，适用于大内存、多 CPU 服务器应用。
+5. ZGC 收集器
+   - 适用于对延迟要求极高的场景。
 
+#### 534.Java 中如何判断对象是否是垃圾？不同垃圾回收方法有付区别？
 
-#### 为什么Java新生代被划分为S0、S1和Eden区
+主要有两种方式：
 
+1. **引用计数法**
+   - 每个对象维护一个引用计数器，引用增加时，计数器加 1；减少时，计数器减 1。
 
+2. 可达性分析算法
+   - 从一组 GC root 出发，遍历所有可以到达的对象，凡是无法到达的，均被视为垃圾。
 
-#### 什么是三色标记算法
+#### 535.为什么 Java 的垃圾收集器将堆分为老年代和新生代？
 
+> **堆的分代机制，根据对象生命周期被划分为三部分**
+>
+> - 新生代（YoungGeneration）：存放新创建的对象。
+>
+> - 老年代（ColdGeneration）：存放存活时间较长的对象，通常是从新生代晋升过来的对象
+>
+> - 元空间（Metaspace）（JDK8 以前为永久代，JDK8 之后为元空间）：存放类的元数据信
+>   息，包括类的静态变量、方法等。
+>
+> **新生代进一步划分为三个区域：**
+>
+> - Eden 区：所有新创建的对象百先分配到 Eden 区。
+>
+> - Survivor 区：Eden 区中的存活对象会被复制到 Survivor 区（一般分为两个区域，S0 和 
+>   S1），经过多次 GC 存活的对象会逐渐晋升到老年代。
+>
+> 新生代中采用**复制算法**，每次垃圾回收时，将 Eden 和 Survivor 中的存活对象复制到另一
+> Survivor空间效率高且避免内存碎片
+>
+> **老年代的作用：**
+>
+> 老年代用于存放生命周期较长的对象，通常是从新生代普升过来的。老年代使用的回收算法不同于
+> 新生代，常用标记-清除算法或标记-整理算法，适合回收长生命周期的对象。
 
+大多数对象存活时间短，放到**新生代**中，回收使用复制算法。少部分对象存活时间长，放到**老年代**中，回收使用标记-整理算法。这样可以更高效的来管理不同生命周期的对象。
 
-#### lava中的youngGc、oldGc、fullGC和mixedGC的区别是什么
+#### 536.为什么 Java8 移除了永久代（PermGen）并引入了元空间（Metaspace）？
 
+主要是为了解决永久代固定大小、容易导致内存溢出、GC 效率低的问题。元空间使用本地内存，具备更灵活的内存分配能力，提升了内存管理效率。
 
+#### 537.为什么 Java 新生代被划分为 S0、S1 和 Eden 区？
 
-#### 什么条件会触发Java的youngGc？
+主要是为了提高新生代内存的利用率。
 
+#### 539.什么是三色标记算法？
 
+是现代垃圾回收器中常用的一种**增量标记算法**，可以与应用程序并发执行，用于标记哪些对象需要被回收，哪些对象需要保留。
 
-#### 什么情况下会触发Java的FullGC
+#### 540.Java 中的 young GC、old GC、full GC 和 mixed GC 的区别是什么？
 
+young GC：仅针对新生代，回收频率较高，回收时间较短。
 
+old GC：仅针对老年代，回收时间较长。
 
-#### 十么是Java的PLAB
+full GC：针对整个堆内存，回收时间最长，对性能有较大影响。
 
+mixed GC：回收新生代和部分老年代，结合了 YGC 的快速回收和 OGC 的深度回收。适用于大内存应用。
 
+#### 541.什么条件会触发 Java 的 youngGc？
 
-#### JVM垃圾回收时产生的concurrentmodefailure的原因是什么
+1. Eden 区空间不足
+2. Eden 区 + Survivor 区空间都不足
 
+#### 542.什么情况下会触发 Java 的 FullGC？
 
+1. 老年代空间不足。
+2. 元空间空间不足。
+3. 调用 System.gc() 命令。
 
-#### 为什么Java中CMS垃圾收集器在发生ConcurrentModeFailure时的FullGC是单线程的
+#### 544.什么是 Java 的 PLAB？
 
+是垃圾回收其中的一种优化机制，主要用于 G1 垃圾收集器。G1 为每个 GC 线程分配一个局部缓冲区，每个线程可以直接在本地 PLAB 中直接进行对象晋升操作，而不要竞争全局老年代的内存空间。
 
+#### 545.JVM 垃圾回收时产生的 concurrent mode failure 的原因是什么？
 
-#### 为什么Java中某些新生代和老年代的垃圾收集器不能组合使用？比如ParNew和Parallelolo
+这是使用 CMS 垃圾回收器时的一种失败现象。CMS 收集器与应用程序并发进行，如果在 CMS 的并发回收阶段，还没有及时清理出足够的空间来满足新对象的分配，就会出现错误。
 
+#### 546.为什么 Java 中 CMS 垃圾收集器在发生 Concurrent Mode Failure 时的 Full GC 是单线程的？
 
+因为没有足够的开发资源。
 
-#### MVM新生代垃圾回收如何避免全堆扫描
+#### 547.为什么 Java 中某些新生代和老年代的垃圾收集器不能组合使用？比如 ParNew 和 Parallel Old？
 
+HotSpot VM 自身的分代收集器实现有一套框架，只有在框架内的实现才能互相搭配使用。
 
+#### 548.JVM 新生代垃圾回收如何避免全堆扫描？
 
-#### Java的CMS垃圾回收器和G1垃圾回收器在记忆集的维护上有什么不同
+1. **卡表（Card Table）机制**：使用卡表来记录老年代引用新生代的指针变化，再进行新生代回收时，只扫描那些卡表中记录的老年代对象。
+2. **写屏障（Write Barrier）**：当老年代引用新生代对象时，写屏障会拦截这种引用，并在卡表中标记相关信息。
 
+#### 549.Java 的 CMS 垃圾回收器和 G1 垃圾回收器在记忆集的维护上有什么不同？
 
+> 记忆集就是一种用于记录从非收集区域指向收集区域的指针集合的抽象数据结构。
 
-#### 为什么G1垃圾收集器不维护年轻代到老年代的记忆集
+CMS 的记忆集即卡表，是通过写屏障维护的。
 
+G1 才用了多层次的记忆集维护机制，每个 Region 都有自己的记忆集，维护成本较高。
 
+#### 550.为什么 G1 垃圾收集器不维护年轻代到老年代的记忆集？
 
-#### Java中的CMS和G1垃圾收集器如何维持并发的正确性
+因为年轻代的 region 都在手机范围内，因此不需要额外记录。
 
+#### 551.Java 中的 CMS 和 G1 垃圾收集器如何维持并发的正确性？
 
+CMS 和 G1 分别通过增量更新和 SATB 来维持 GC 线程和应用线程并发的正确性。
 
-#### 什么是Java中的loggingwritebarrier？
+#### 552.什么是 Java 中的 logging write barrier？
 
+是一种与 GC 相关的机制，主要用于追踪和记录对象引用的变化。
 
+#### 553.Java 的 G1 垃圾回收流程是怎样的？
 
-#### lava的G1垃圾回收流程是怎样的
+分为两大阶段，分别是并发标记和对象拷贝。
 
+并发标记分为初始阶段、并发阶段、最终标记、清理阶段。
 
+然后根据标记结果选择合适的 region 组成收集集合，最后将存货对象拷贝到新的 region 中。
 
-#### ava的CMS垃圾回收流程是怎样的
+#### 554.Java 的 CMS 垃圾回收流程是怎样的？
 
+分为几大阶段，分别为初始标记、并发标记、并发预清理、可中断的预清理阶段、重新标记、并发清理、并发重置。
 
+#### 555.你了解 Java 的 ZGC（ZGarbageCollector）吗？
 
-#### 尔了解Java的ZGC（ZGarbageCollector）吗
+ZGC 是 Java 11 引入的低延迟垃圾回收器，目的在支持大内存的应用程序，并保持短的 GC 停顿时间。
 
+其特点为：
 
+1. 并发收集：收集过程大部分是在应用程序运行的同时进行的
+2. 指针压缩：使用指针压缩技术，减少内存占用。
+3. 极小停顿：停顿时间通常在毫秒级。
 
-#### MVM垃圾回收调优的主要自标是什么
+## 调优
 
+#### 557.MVM 垃圾回收调优的主要自标是什么？
 
+1. 最短暂停时间：首要目标是减少应用的停顿时间。在垃圾回收时，尽量保持应用的响应能力。
+2. 高吞吐量：在单位时间内完成更多的业务处理。
 
-#### 如何对Java的垃圾回收进行调优
+两者基本上不可兼得，所以调优的时候要明确目标。
 
+#### 558.如何对 Java 的垃圾回收进行调优？
 
+核心思路就是尽可能使对象在年轻代被回收，减少对象进入老年代。
 
-#### 常用的JVM配置参数有哪些
+根据 GC 日志具体分析，需要关注的指标是 Young GC 和 Full GC 的触发频率、原因、晋升的速率、老年代内存占用量等。
 
+比如频繁发生 Full GC，又没有内存泄露，只是 Young GC 后大量对象进入老年代，则可以适当调大 Survivor 的空间。
 
+#### 559.常用的 JVM 配置参数有哪些？
 
-#### 堂用哪些工具来分析JVM性能
+-Xms：初始化堆内存大小
 
+-Xmx：最大堆内存大小
 
+-XX:MetaspaceSize：初始化元空间大小
 
-#### 如何在Java中进行内存泄漏分析
+-XX:MaxMetaspaceSize：最大元空间大小
 
+-Xss：每个线程的栈大小
 
+-XX:+PrintGCdetails：打印详细的垃圾回收日志
+
+-XX:+UseG1GC：启用 G1 垃圾收集器
+
+-XX:+UseZGC：启用 ZGC 垃圾收集器
+
+#### 560.你常用哪些工具来分析 JVM 性能？
+
+jmap：用于分析 JVM 内存使用情况，尤其是内存泄漏问题。
+
+jstack：用于分析线程状态，排查死锁。
+
+jstat：用于分析实时的性能数据。
+
+Arthas：一个强大的 Java 诊断工具，提供了实时监控和分析功能。
+
+#### 561.如何在 Java 中进行内存泄漏分析？
+
+1. 利用 jstat 命令来观察 GC 概要信息，发现 GC 后 内存占用并没有明显减少，说明内存泄漏的概率很大。
+2. 利用 jmap 命令生成 heap dump，将其导入 VisualVM 工具内进行分析，通过大量的内存占用找到对应的对象。
+3. 通过对象找到对应的代码来分析，最终修复代码。
 
 # MySQL
 
@@ -1973,3 +2399,14 @@ rpush 将一个或多个值插入到列表尾部。
 lpop 移除并返回列表头部的元素。
 
 rpop 移除并返回列表尾部的元素。
+
+# 场景题
+
+#### 752.假设有一个 1G 大的 HashMap，此时用户请求过来刚好触发它的扩容，会怎样？让你改造下 HashMap 的实现该怎样优化？
+
+会创建一个比之前大两倍的新数组，然后将所有元素搬运到新数组中。所以当前用户请求会被阻塞，等待扩容完毕。
+
+通过渐进式 rehash 来优化。
+
+1. 扩容分多批次完成。
+2. 每次插入、修改或查询时，迁移少量旧数据到新数组中。
