--- a/其他/学习计划.md
+++ b/其他/学习计划.md
@@ -1,34 +1,34 @@
 # 思考问题的工具箱
 
-#### 1.逻辑推理
-
-> 先通过逻辑推理将整个的流程梳理清楚。
-
-- 利用逻辑规则和定理进行推理，确保每一步的推导都是合理的，一步步逼近问题的本质。
-
-#### 2.分解法
+#### 1.分解法（撕裂）
 
 > 然后将模块分解为子模块。
 
 - 将复杂问题分解为更简单的子问题，逐步解决每个子问题，从而找到整体问题的解。
 
-#### 3.构造法
+#### 2.构造法（联想，具象化）
 
 > 列举实际的应用场景，将这个模型套到实际的例子上。
 
 - 通俗说就是打比方。通过构造特定的例子或模型来帮助理解问题，从而得出结论或解法。
 
-#### 4.逆向思维
+#### 3.归纳法（对比，抽象化）
+
+> 最后将类似的技术进行归纳总结，提炼出相同点。
+
+- 通过观察具体案例，归纳出一般规律，或根据已有的结论推导出新的结论。
+
+#### 4.逆向思维（反过来想）
 
 > 看看为了达成这个目标还有没有其它的解决方案。
 
 - 利用否定、逆向思考等来获得一种新的视角。
 
-#### 5.归纳法
+#### 5.逻辑推理
 
-> 最后将类似的技术进行归纳总结，提炼出相同点。
+> 先通过逻辑推理将整个的流程梳理清楚。
 
-- 通过观察具体案例，归纳出一般规律，或根据已有的结论推导出新的结论。
+- 利用逻辑规则和定理进行推理，确保每一步的推导都是合理的，一步步逼近问题的本质。
 
 # 逻辑
 
