--- a/其他/找工作/八股文-面试题.md
+++ b/其他/找工作/八股文-面试题.md
@@ -177,77 +177,120 @@ Error 表示系统级的不可恢复的错误，不应该被捕获或处理。
 4. 引入了 Stream 流式接口。
 5. 引入了 CompletableFuture 类。
 
-#### 423.Java 中 String、StringBuffer 和 StringBuilder 的区别是什么？
+#### 423.Java 中 String、StringBuffer 和 StringBuffer 的区别是什么？
 
+String 是不可变类，每次修改都会创建新对象，性能较低。
 
+StringBuffer 是可变类，且是线程安全的，性能比 String 高。
+
+StringBuffer 是可变类，线程不安全，即去掉了保证线程安全的那部分，性能最高。
 
 #### 424.Java 的 StringBuilder 是怎么实现的？
 
-
+1. 内部使用字符数组来存储字符序列。
+2. append()、insert() 等操作，直接修改内部的字符数组，而不是创建新对象。
+3. 每次操作时，如果容量不足，就会扩展数组为原来的两倍。
 
 #### 425.Java 中包装类型和基本类型的区别是什么？
 
+基本类型是直接存储数值的变量，位于栈上，性能较高，不支持 null。
 
+包装类型是类，存储在堆中，可以用于集合中，并且支持 null。
 
 #### 413.接口和抽象类有什么区别？
 
+接口的设计是**自上而下**的，基于某些行为约束定义了接口。
 
+抽象类的实现是**自下而上**的，发现很多类，有很多代码可以复用，因此将公共逻辑封装成一个抽象类，减少代码冗余。
 
 #### 426.JDK 和 JRE 有什么区别？
 
+JRE 指的是 Java 运行环境，包括 JVM、核心类库和其他文件等。
 
+JDK 是 JRE 的超集，额外包括了用于开发、调试和监控 Java 应用程序的工具。
 
 #### 427.你使用过哪些 JDK 提供的工具？
 
+javac：编译器，将源代码编译成字节码。
 
+java：使用 JVM 来解释并执行字节码文件。
+
+javadoc：根据注释生成 API 文档。
+
+jar：将多个 .class 文件打包为单一文件。
+
+性能监控和分析：
+
+jps：显式所有正在运行的 Java 进程。
+
+jmap：内存映射，便于分析内存泄漏情况。
+
+jstack：生成线程堆栈信息。
+
+jstat：监控统计。
+
+jinfo：查看和修改正在运行的 JVM 参数。
 
 #### 100.Java 中 hashCode 和 equals 方法是什么？它们与 == 操作符有什么区别？
 
+hashCode 用于散列存储结构中确定对象的存储位置。
 
+equals 用来比较两个对象的内存是否相等。
+
+== 用来比较两个引用是否指向同一个对象。
 
 #### 428.Java 中的 hashcode 和 equals 方法之间有什么关系？
 
-
+如果两个对象根据 equals 相等，则它们的 hashCode 必须相等，但是反过来不要求成立。
 
 #### 429.什么是 Java 中的动态代理？
 
-
+是一种在运行时创建代理对象的机制，可以在不修改目标对象的前提下对其行为进行增强或调整。
 
 #### 430.JDK 动态代理和 CGLIB 动态代理有什么区别？
 
+前者是基于接口的，所以要求代理的目标类一定实现了某个接口。
 
+后者是基于字节码生成技术的，通过继承目标类来生成代理类，要注意 final 方法无法代理。
 
 #### 431.Java 中的注解原理是什么？
 
-
+注解就是一个**标记**，用于给代码添加说明信息。可以通过工具或框架利用这些信息进行特定的处理，比如代码生成、编译时检查和运行时处理等。
 
 #### 432.你使用过 Java 的反射机制吗？如何应用反射？
 
-
+Java 的反射机制是指在运行时获取类的结构信息，并操作对象的一种机制。可以动态的获取类的信息、创建对象、访问字段、调用方法、得到注解信息。
 
 #### 433.什么是 Java 的 SPI（ServiceProviderinterface）机制？
 
+SPI 是一种**插件机制**，用于在运行时动态加载服务的实现。包括以下部分：
 
+1. **服务接口**：定义某个服务的规范或功能。
+2. **服务提供者**：服务接口的具体实现类。
+3. **服务加载器**：可以在运行时发现和加载多个服务提供者。
+4. **配置文件**：通过在 META-INF/services/ 目录下配置服务接口的实现类来声明服务。
 
 #### 434.Java 泛型的作用是什么？
 
-
+通过在编译时检查**类型安全**，允许程序员编写**更通用**和灵活的代码，避免在运行时发生**类型转换**错误。
 
 #### 6306.Java 泛型擦除是什么？
 
-
+编译器**在编译时将所有的泛型信息删除的过程**，确保与 Java 1.4 之前的版本保持兼容。
 
 #### 435.什么是 Java 泛型的上下界限定符？
 
-
+用于对泛型类型参数进行范围限制，上界限定符用 extends 表示，通常用于读取操作。下界限定符用 super 表示，通常用于写入操作。
 
 #### 436.Java 中的深烤贝和浅烤贝有什么区别？
 
+深烤贝不仅复制对象本身，还递归复制对象中所有的引用对象。
 
+浅烤贝只复制对象的引用，不复制引用指向的实际对象。
 
 #### 437.什么是 Java 的 Integer 缓存池？
 
-
+Java 在自动装箱时，对于值在 -128 到 127 范围内的 int 类型，会直接返回一个已经缓存的 Integer 对象。为了提高性能和节省内存。
 
 #### 438.Java 的类加载过程是怎样的？
 
@@ -266,83 +309,133 @@ Error 表示系统级的不可恢复的错误，不应该被捕获或处理。
 
 #### 440.什么是 Java 的 BigDecimal？
 
+是一个用于高精度计算的类，提供对于浮点数和定点数的精确控制。
 
+#### 441.使用 new String("yupi”）语句在 Java 中会创建多少个对象？
 
-#### 441.使用 newString("yupi”）语句在 Java 中会创建多少个对象？
+1 或 2 个字符串对象。
 
-
+1. 如果字符串常量池中存在字符串对象 “yupi” 的引用，那么会在堆上创建两个字符串对象，其中一个字符串对象的引用会被保留在字符串常量池中。
+2. 如果不存在引用，则只会在堆中创建一个字符串对象。
 
 #### 442.Java 中 final、finally 和 finalize 各有什么区别？
 
+final：被 final 修饰的类、方法、变，不可继承、不能重写、不可重新赋值。
 
+无论是否发生异常，finally 代码块都会执行。
+
+finalize()：允许垃圾再被回收之前进行清理操作。
 
 #### 443.为什么在 Java 中编写代码时会遇到乱码问题？
 
+主要是**字符编码和解码不一致**。常见的有：
 
+1. 默认编码设置有问题，不同的操作系统中使用不用的编码。
+2. 流处理中的编码有问题，在文件或网络传输时，没有指定读取或写入的编码格式。
+3. 数据库字符集和应用字符集不匹配。
 
-#### 422.JDK9 中将 String 的 char 数组改为 byte 数组？
+#### 422.为什么 JDK9 中将 String 的 char 数组改为 byte 数组？
 
-
+为了节省内存空间，提高内存利用率。char 数组中每个字符占用一个字节，byte 数组引入了 coder 变量来表示编码方式，如果字符串中只包含 Latin-1 范围内的字符，则使用单字节编码，否则使用 UTF-16。
 
 #### 825.如何在 Java 中调用外部可执行程序或系统命令？
 
-
+1. 使用 Runtime.exec()
+2. 使用 ProcessBuilder 类
 
 #### 938.如果一个线程在 Java 中被两次调用 start() 方法，会发生什么？
 
-
+会报错，因为线程一单开始执行，就不能再回到初始状态。
 
 #### 941.栈和队列在 Java 中的区别是什么?
 
+栈遵循后进先出原则，常用于函数调用、表达式求值等场景。
 
+队列遵循先进先出原则，常用于任务调度、资源管理等场景。
 
 #### 942.Java 的 Optional 类是什么？它有什么用？
 
-
+是 Java 8 引入的一个容器类，用于表示可能为空的值。可以减少空指针异常，同时可以提高代码的可读性。
 
 #### 943.Java 的 I/O 流是什么？
 
+是用于处理输入和输出数据的类库，通过流，程序可以从各种输入源（文件、网络、控制台），或者将数据写入到目标位置（文件、网络、控制台）。
 
+主要分为**字节流**和**字符流**两大类。
+
+字节流用来处理 8 位字节数据，比如二进制文件，图片、视频等。
+
+字符流用来处理 16 位字符数据，比如文本文件等。
 
 #### 945.什么是 Java 的网络编程?
 
+网络编程核心概念：
 
+IP 地址
+
+端口号
+
+Socket：网络通信基本单位，通过 IP 地址和端口号标识。
+
+协议：网络通信规则
 
 #### 948.Java 中的基本数据类型有哪些？
 
+整形：byte、short、int、long
 
+浮点型：float、double
+
+字符型：char
+
+布尔型：boolean
 
 #### 949.什么是 Java 中的自动装箱和拆箱？
 
+自动装箱指编译器将基本数据类型转换为对应的包装类型。
 
+自动拆箱指编译器将包装类型转换为对应的基本数据类型。
 
 #### 988.什么是 Java 中的选代器（Iterator）？
 
-
+是用于遍历集合元素的接口，可以依次访问集合中的每一个元素。
 
 #### 989.Java 运行时异常和编译时异常之间的区别是什么？
 
+编译时异常，发生在编译阶段，必须使用 try-catch 捕获或者 throws 抛出，通常由外部因素引发。
 
+运行时异常，发生在程序运行期间，可以不用显式处理，一般是由编程错误或逻辑漏洞引发。
 
 #### 992.什么是 Java 中的继承机制？
 
-
+是面向对象编程的核心概念之一，允许一个类继承另一个类的属性和方法。提高代码的可重用性和可扩展性。
 
 #### 993.什么是 Java 的封装特性？
 
-
+是面向对象编程的核心概念之一，讲对象的状态和行为封装在类的内部，通过公开的接口与外部交互。
 
 #### 994.Java 中的访问修饰符有哪些？
 
+主要有四种：
 
+public：可以被任何类访问。
+
+private：只能在定义它的类的内部访问。
+
+protected：可以被同一个包中的其他类访问，也可以被子类访问。
+
+默认：只能被同一个包中的其他类访问。
 
 #### 995.Java 中静态方法和实例方法的区别是什么？
 
+静态方法属于类，可以通过类名直接调用，不能直接访问实例变量和实例方法，随着类的加载而加载，类的卸载而消失。
 
+实例方法属于类的实例，必须通过对象来调用，可以访问实例变量和实例方法，随着对象的创建而存在，对象的销毁而消失。
 
 #### 990.Java 中 for 循坏与 foreach 循坏的区别是什么？
 
+for 是一种传统的循环结构，可以通过多种变量进行复杂的控制。
 
+foreach 是一种简化的循环结构，适用于遍历数组和实现了 Iterable 接口的集合。
 
 #### 439.什么是 Java 中的双亲委派模型？
 
@@ -350,31 +443,59 @@ Error 表示系统级的不可恢复的错误，不应该被捕获或处理。
 
 #### 5900.Java 中 wait() 和 sleep() 的区别？
 
+wait() 和 sleep() 都是用于暂停线程的操作。
 
+wait() 方法必须在**同步块或同步方法中调用**，调用后，线程后释放它持有的对象锁，并进入等待状态。
+
+sleep() 可以在**任何上下文中调用，不需要获取对象锁**。调用后，不会释放锁，并进入休眠状态。
 
 #### 5907.Java 和 Go 的区别?
 
-
+Go 是一种注重简洁性和高效性的语言，主要面向系统编程和并发处理。并发模型基于 Goroutine，比操作系统线程更轻量级。GC 暂停时间较短，在云计算、微服务、容器化和高性能服务器中得到广泛应用。
 
 #### 5908.Java Obiect 类中有什么方法，有什么作用?
 
+1. boolean equals(Object obj)
+   - 用于比较两个对象是否想等，默认是比较对象的内存地址。
 
+2. int hashCode()
+   - 返回对象的哈希码
+
+3. String toString()
+   - 返回对象的字符串表示
+
+4. final Class<?> getClass()
+   - 返回对象的运行时类
+5. void notify()
+   - 唤醒在对象的监视器上等待的一个线程
+6. void notifyAll()
+   - 唤醒在对象的监视器上等待的所有线程
+7. void wait()
+   - 使用当前线程等待
+8. void wait(long timeout)
+   - 使当前线程等待，超时后线程会被自动唤醒。
+9. Object clone()
+   - 创建并返回当前对象的副本，默认浅拷贝。
 
 #### 5909.Java 中的字节码是什么?
 
-
+编译器将源代码编译后生成的中间表示形式。
 
 #### 166.什么是 BIO、NIO、AIO？
 
+BIO 是阻塞 I/O 模式，调用方发起 I/O 操作时会被阻塞，直到操作完成后才继续执行。
 
+NIO 是非阻塞 I/O 模式，调用方发起 I/O 操作后可以立即返回，即使操作未完成。 
+
+AIO 是异步 I/O 模式，调用方发起 I/O 操作后，不需要等待操作完成。在操作完成后，操作系统通过回调函数或事件通知的方式告知调用者。
 
 #### 718.什么是 Channel？
 
-
+是 NIO 中的一个核心概念，用于数据的读写操作，比传统的 I/O 流更灵活和高效。
 
 #### 720.什么是 Selector？
 
-
+是用于实现 I/O 多路复用的组件通过一个单独的线程同时监视多个通道的事件。
 
 # Java 集合
 
