--- a/其他/找工作/简历.md
+++ b/其他/找工作/简历.md
@@ -48,7 +48,7 @@
 
 ### 项目经历
 
-**项目名称：**简快接口平台                                                                 http://efast.070300.xyz:8101/api/doc.html#/home
+**项目名称：**简快接口平台                                                                 https://github.com/qisande/efast-api-backend
 
 #### 项目介绍
 
@@ -70,7 +70,7 @@
 
 ### 项目经历
 
-**项目名称：**趣友阁                                                               http://friend.070300.xyz:8100/api/doc.html#/home
+**项目名称：**趣友阁                                                               http://110.41.86.79:8100/api/doc.html#/home
 
 #### 项目介绍
 
