--- a/计算机/近期要学习的.md
+++ b/计算机/近期要学习的.md
@@ -1,5 +1,10 @@
-1. sql语句
-2. redis
-3. springboot 注解
-4. 算法
-5. 面试题
+1. SQL 语句
+2. Mysql 数据库
+3. Redis 使用
+4. RabbitMQ 使用
+5. ElasticSearch 使用
+6. Java 开发手册（黄山版）
+7. Java 源码的目录结构
+8. Java 多线程编程
+9. Java 网络编程
+10. springboot 使用
