--- a/其他/找工作/八股文-面试题.md
+++ b/其他/找工作/八股文-面试题.md
@@ -1,3 +1,15 @@
+# 真实面经
+
+1. HashMap的底层数据结构？
+2. 哈希表在搜索的时间复杂度是多少？
+3. 什么是Hash碰撞？HashMap底层如何解决hash冲突的？
+4. 链表在搜索的时间复杂度是多少？
+5. 链表是什么样的？
+6. 如果要插入一个数据链表的时间复杂度是多少？
+7. 链表的优势和劣势？
+8. 设计模式了解过吗？了解过，装饰者模式 什么时候用到装饰者模式？
+9. 一些场景写sql语句
+
 # 设计模式
 
 #### 1123.什么是设计模式？请简述其作用。
