--- a/学习计划.md
+++ b/学习计划.md
@@ -30,30 +30,51 @@
 
 - 利用逻辑规则和定理进行推理，确保每一步的推导都是合理的，一步步逼近问题的本质。
 
-# 逻辑
-
-- 《事实》
-
-# 数学
-
-- 《数学之美》
-
 # 哲学
 
 > 感觉
 
-- 《老子》
-- 《庄子》
 - 《论语》
+
 - 《大学》
+
 - 《中庸》
+
 - 《孟子》
+
+- 《六祖坛经》
+
+- 《金刚经》
+
+- 《老子》
+
+- 《庄子》
+
+  > 逍遥游、齐物论、秋水、养生主
 
 # 文学
 
 > 先把标点符号弄清楚
 
-- 《卡拉马佐夫兄弟》
-- 《霍乱时期的爱情》
-- 《百年孤独》
-- 
+- 莎士比亚
+- 雨果
+
+- 托尔斯泰
+
+- 陀思妥耶夫斯基
+
+  > 《死屋手记》《地下室手记》《白痴》《白夜》《罪与罚》《卡拉马佐夫兄弟》
+
+- 马尔克斯
+
+  > 《霍乱时期的爱情》《百年孤独》
+
+# 逻辑
+
+- 《事实》
+- 《简单的逻辑学》
+- 《逻辑学导论》
+
+# 数学
+
+- 《数学之美》
