--- a/其他/找工作/项目-面试题.md
+++ b/其他/找工作/项目-面试题.md
@@ -60,7 +60,7 @@ client-sdk：封装了对各个 API 接口的调用方法。
 
 interface：提供模拟的 API 接口。
 
-交互流程：首先管理员创建接口后通过 backend 保存到数据库中。用户在自己的项目中引入 SDK 模块，并通过方法调用 API 接口。然后请求被发送到 API 网关，进行用户鉴权和接口调用统计，最后将接口转发到实际的 API 接口。
+交互流程：首先管理员创建接口后通过 backend 保存到数据库中。用户在自己的项目中引入 SDK 模块，并通过方法调用 API 接口。然后请求被发送到 API 网关，进行用户鉴权和接口调用统计，最后将请求转发到实际的 API 接口。
 
 #### 请简要介绍 Maven 的基本概念、作用以及如何使用 Maven 进行多模块依赖管理和打包？
 
@@ -95,14 +95,14 @@ Swagger 是一个用于自动构建和生成接口文档的工具集，可以根
 
 1. 统一鉴权：使用 API 签名认证算法来保证请求的合法性。
 2. 公共业务逻辑：对每个接口的调用进行调用次数的统计。
-3. 路由转发：前端发送请求到 API 网关，通过网关转发情况到实际的 API 接口。
+3. 路由转发：前端发送请求到 API 网关，通过网关转发请求到实际的 API 接口。
 4. 流量染色：给请求加上特定的请求参数，以便确定 API 的来源和合法性。
 
 #### 你是如何基于 SpringBootStarter 开发了客户端 SDK 的，讲述一下实现过程？
 
 1. 明确 SDK 的功能。
 2. 引入相关依赖。
-3. 便携配置类，加上特定注解，实现自动从配置文件中读取配置。
+3. 编写配置类，加上特定注解，实现自动从配置文件中读取配置。
 4. 开发业务逻辑
 5. 使用 install 命令打包 SDK。
 6. 在其他本地项目中引入 SDK。
@@ -112,7 +112,7 @@ Swagger 是一个用于自动构建和生成接口文档的工具集，可以根
 1. 在平台上进行注册登录，获取到开发者密钥。
 2. 下载 SDK 代码到本地，或者从 Maven 中央仓库中引入依赖。
 3. 在项目的配置文件中填写客户端配置，比如 ak 和 sk。
-4. 在需要的地方进行依赖注入并使用。
+4. 在需要的地方进行依赖注入得到客户端并使用。
 
 #### 有哪些客户端 SDK 的设计技巧？
 
