--- a/学习计划.md
+++ b/学习计划.md
@@ -3,6 +3,10 @@
 #### 1.分解法（撕裂）
 
 > 然后将模块分解为子模块。
+>
+> 逻辑树（分析工具）：
+>
+> 把一个已知问题当成树干，然后开始考虑这个问题和哪些相关问题或者子任务有关。每想到一点，就给这个问题（也就是树干）加一个“树枝”，并标明这个“树枝”代表什么问题。一个大的“树枝”上还可以有小的“树枝”，如此类推，找出问题的所有相关联项目。逻辑树主要是帮助你理清自己的思路，不进行重复和无关的思考。
 
 - 将复杂问题分解为更简单的子问题，逐步解决每个子问题，从而找到整体问题的解。
 
