--- a/其他/找工作/简历.md
+++ b/其他/找工作/简历.md
@@ -30,27 +30,26 @@
 
 
 
-### 项目经历（最好上线，加上 QPS，TPS）
+### 项目经历
 
 **简快接口平台**                                                                                  https://github.com/qisande/efast-api-backend
 
 **项目介绍**
 
-基于 React + Spring Boot + Dubbo + Gateway 的 API 接口开放调用平台。
+基于 Spring Boot + Dubbo + Gateway 的 API 接口开放调用平台。
 
-管理员可以接入并发布接口，可视化各接口调用情况；用户可以开通接口调用权限、浏览接口及在线调试，并通过客户端 SDK 轻松调用接口。
+管理员可以发布接口，可视化各接口调用情况；用户可以开通接口调用权限、浏览接口及在线调试，并通过客户端 SDK 轻松调用接口。
 
-**主要工作**（**负责了哪个模块，用什么技术解决了什么问题，写具体的优化点，比如时间 从2s 到 200ms，多少条SQL**）
+**主要工作：**
 
-> 根据自己的方向选择去写并适当调整文案，灵活一点。 强烈建议结合下面的扩展思路多完善下项目，增加一些区分度！
-
-1. 根据业务流程，将整个项目后端划分为 web 系统、模拟接口、公共模块、客户端 SDK、API 网关这 5 个子项目，并使用 Maven 进行多模块依赖管理和打包。
-2. 使用 Ant Design Pro 脚手架 + 自建 Spring Boot 项目模板快速构建初始 web 项目，并实现了前后端统一权限管理、多环境切换等基础能力。
+1. 根据业务流程，将整个项目后端划分为 web 系统、模拟接口、公共模块、客户端 SDK、API 网关这 5 个子项目，并使用 Maven 进行依赖管理和打包。
+2. Spring Boot 项目模板快速构建初始 web 项目，并实现了基于 AOP 和注解的权限管理和日志、异常处理、跨域等基础能力。
 3. 基于 MyBatis Plus 框架的 QueryWrapper 实现对 MySQL 数据库的灵活查询，并配合 MyBatis X 插件自动生成后端 CRUD 基础代码，减少重复工作。
-4. 为防止接口被恶意调用，设计 API 签名认证算法，为用户分配唯一 ak / sk 以鉴权，保障调用的安全性、可溯源性（指便于统计接口调用次数）。
-5. 为解决开发者调用成本过高的问题（须自己使用 HTTP + 封装签名去调用接口，平均 20 行左右代码），基于 Spring Boot Starter 开发了客户端 SDK， **一行代码** 即可调用接口，提高开发体验。
-6. 选用 Spring Cloud Gateway 作为 API 网关，实现了路由转发、访问控制、流量染色，并集中处理签名校验、请求参数校验、接口调用统计等业务逻辑，提高安全性的同时、便于系统开发维护。（更多 API 网关的优点参考：https://blog.csdn.net/guorui_java/article/details/124112897）
-7. 为解决多个子系统内代码大量重复的问题，抽象模型层和业务层代码为公共模块，并使用 Dubbo RPC 框架实现子系统间的高性能接口调用（实测单机 qps 达 xx），大幅减少重复代码。
+4. 为防止接口被恶意调用，设计 **API 签名认证**算法，用户注册时为用户分配唯一 ak / sk 以鉴权，保障调用的安全性、可溯源性（指便于统计接口调用次数）。
+5. 为解决开发者调用成本过高的问题（须自己使用 HTTP + 封装签名去调用接口），基于 Spring Boot Starter 开发了客户端 SDK， **一行代码** 即可调用接口，提高开发体验。
+6. 选用 Spring Cloud Gateway 作为 **API 网关**，实现了访问控制、流量染色、路由、日志，并集中处理签名校验、请求参数校验、接口调用统计等业务逻辑，提高安全性的同时、便于系统开发维护。
+7. 基于 nacos 注册中心和 Dubbo RPC，解决了跨模块方法调用的问题，就像调用本地方法一样简单。
+8. 单机 8 核 16 线程，16G 内存，QPS 达到了 513/sec。
 
 
 
@@ -96,7 +95,7 @@
 4. 采用 Docker 容器完成后端项目部署，并且使用宝塔面板对项目进行运维监控。
 5. 使用 JUnit Jupiter API 的 @Test 注解和 Assertions 类实现对用户模块的单元测试，测试覆盖度达到 90%。
 6. 通过 Spring Boot 的多套 application-{env}.yml 配置文件实现多环境，并通过指定 --spring.profiles.active=prod 实现生产环境部署。
-7. 使用 Nginx 网关统一接受前端页面和后端接口请求，并通过其 proxy_pass 反向代理配置解决跨域问题。
+7. 单机 8 核 16 线程，16G 内存，QPS 达到了 457/sec。
 
 ### 教育经历
 
@@ -153,3 +152,178 @@
 ·补充功能：为了提高系统管理员处理大量报名附件的效率，系统引入了CompletableFuture来异步执行附件的批量下载任务。通过CompletableFuture.allOf判断所有的下载任务是否完成并进行后续压缩操作。
 
 校外人员进校预约：校外人员进校预约系统为学校提供了一套全面的访客管理解决方案旨在提升校园安全和访客体验身份验证：系统通过手机号和短信验证码进行身份校验，确保用户身份的真实性。Redis用于存储验证码，并设置12
+
+# 简快接口平台
+
+三张表：用户表、接口表、用户接口关系表
+
+两条线：
+
+第一：管理员
+
+用户的增删改查（注册（分配ak、sk）、登录（利用 redis 来存储登录态）、注销）
+
+管理员对接口信息进行增删改查（发布接口、上线接口、下线接口、删除接口、调用接口，统计调用次数前三的接口）
+
+用户接口关系增删改查（开通接口、查看接口、调用接口）
+
+第二：用户
+
+用户通过 SDK 直接调用方法，通过 Hutool 工具包向网关发送 HTTP 请求，获得结果后返回给用户。根据请求内容生成签名，并在请求头中添加签名。
+
+网关拦截请求后，第一打印日志；第二，通过签名来鉴权；第三，路由到真正的接口地址上；第四，调用接口后，更新接口调用次数。第五，返回结果给用户。
+
+网关通过 dubbo 调用后台管理的方法（获取接口信息、调用次数加一、获取开通接口的用户信息）
+
+
+
+技术点：
+
+API 签名认证
+
+SDK 开发
+
+Spring Cloud Gateway 的使用
+
+Dubbo RPC 框架的使用
+
+# 高性能 RPC 框架
+
+RPC 是一种计算机通信协议，允许一个程序像调用自己的方法一样，调用另一个程序的接口，而不需要了解数据的传输处理过程、底层通信细节。
+
+消费者想要调用提供者，需要提供者启动一个 web 服务，然后通过请求客户端发送 HTTP 请求或者其他协议的请求来调用。RPC 就是提供一个统一的服务调用接口，通过请求处理器根据客户端的请求参数来进行不同的处理、调用不同的服务和方法。
+
+具体实现就是服务提供者维护一个本地服务注册器，记录服务和实现类的映射。然后请求处理器请求参数中的服务名从服务注册器中找到对应的服务实现类，并通过 Java 反射机制调用请求参数中的方法名指定的方法。
+
+具体模块：
+
+**全局配置加载**：
+
+目的：
+
+配置信息太多需要进行统一管理。通过编写配置文件来自定义配置，同时维护一个全局配置对象，便于快速获取到配置。
+
+具体实现：
+
+1. 读取配置文件：编写工具类，通过 Hutool 的 Setting 模块，直接读取指定名称的配置文件，并转化为 Java 对象。
+
+2. 维护全局配置对象：在 RPC 项目启动的时候，使用双检锁单例模式创建配置对象实例，集中的从这个对象中获取配置信息，避免重复创建对象，减少性能开销。
+
+**序列化器和 SPI 机制**：
+
+目的：
+
+Java 对象存活在 JVM 虚拟机中，如果想在网络中进行传输，就需要序列化和反序列化。同时能够让框架的开发者定制序列化器、指定序列化器。
+
+具体实现：
+
+首先是不同序列化器的具体实现，其次使用自定义的 SPI 机制，支持用户自定义序列化器并指定键名。
+
+使用 Hutool 工具包的 ResourceUtil 读取资源文件，将实现类保存到 HashMap 中。创建序列化器工厂，当需要实例的时候，使用反射机制获取到实现类的对象。
+
+**注册中心实现**：
+
+目的：
+
+帮助服务消费者获取到服务提供者的调用地址，而不是将地址硬编码到项目中。
+
+具体实现：
+
+注册中心使用 Etcd，并实现初始化、服务注册、服务注销、服务发现、服务销毁等方法。可以利用 SPI 机制自定义或指定不同的注册中心。服务消费者使用代理并调用服务发现方法从注册中心获取到服务提供者的地址，之后可以根据地址发送请求，并拿到响应后的数据。
+
+通过续期机制来实现心跳检测，保证及时更新注册中心，剔除下线节点。
+
+消费端增加本地缓存。在进行服务发现时，拿到服务信息后缓存到本地，并且优先从缓存获取服务。同时监听 key 的变化，当注册中心清理缓存后，本地也及时清理缓存，保证数据一致性。
+
+**自定义协议**：
+
+目的：
+
+HTTP 协议的头部信息和格式较为冗余，影响网络传输性能。需要自定义消息结构和网络传输。
+
+具体实现：
+
+网络传输选择 TCP 协议，消息结构包括请求头和请求体，请求头包括魔数（安全性保证）、版本号、序列化器、消息类型、状态、请求 id、消息体长度。
+
+发送请求前使用编码器将消息对象转换为 Buffer，接收消息后使用解码器将 Buffer 转换为消息对象。
+
+请求发送：
+
+服务消费者通过服务代理发送请求。
+
+第一，构造请求；第二，从注册中心获取请求地址；第三，构造消息对象；第四，编码消息对象；第五，发送 TCP 请求；第六，接受响应；然后解码为消息对象。
+
+请求处理器：
+
+服务提供者通过请求处理器接受请求并调用服务。
+
+第一，接受请求并解码为消息对象；第二，通过反射调用服务实现类；第三，封装响应结果；第四，构造消息对象；第五，编码；第六，发送响应。
+
+**负载均衡**：
+
+目的：
+
+减轻单个节点的压力，利用好其他节点的资源。确保每个资源都能有效的处理负载，增加系统的并发量。
+
+具体实现：
+
+有轮巡、随机、一致性 Hash 等算法来实现负载均衡。
+
+使用服务器地址来计算 Hash 值，并引入虚拟节点，将服务器节点均匀的分散到整个 Hash 环上。
+
+**重试机制**：
+
+目的：
+
+在调用接口失败后，使得服务消费者拥有自动重试的能力，提高系统的可用性。
+
+具体实现：
+
+引入 Guava-Retrying 库，使用 Guava-Retrying 提供的 RetryerBuilder 来指定重试条件、重试等待策略、重试停止策略等。比如当发现异常时重试，固定 3s 重试一次，超过 3 次后停止重试。
+
+**容错机制**：
+
+目的：
+
+消除偶发、单点故障对系统带来的整体影响。
+
+具体实现：
+
+容错有多种方式，比如降级、熔断、限流、快速失败、静默处理等，可以先重试后容错。在重试多次抛出异常时，获取容错策略并执行，比如静默处理。
+
+**启动机制**：
+
+目的：
+
+让框架更易用，帮助开发者最少只用一行代码，就能轻松使用框架。
+
+具体实现：
+
+服务提供者利用 @RpcService 注解，并实现 BeanPostProcessor 中的方法，将服务注册到本地和注册中心。
+
+服务消费者利用 @RpcReference 注解，并实现 BeanPostProcessor 中的方法，先生成代理对象并注入到属性中。
+
+
+
+技术点：
+
+启动机制
+
+序列化器和 SPI 机制
+
+# 趣友阁
+
+帮助大家找到学习伙伴，包括按标签搜索用户、建房组队、推荐相似用户等功能。
+
+
+
+技术点：
+
+单点登录
+
+推荐用户，缓存预热
+
+相似度算法
+
+
+
