--- a/其他/找工作/简历2.0.md
+++ b/其他/找工作/简历2.0.md
@@ -96,6 +96,8 @@
 - 通过 Spring Boot 的多套 application-{env}.yml 配置文件实现多环境，并通过指定 --spring.profiles.active=prod 实现生产环境部署。
 - 自主编写 Dockerfile，并通过第三方容器托管平台实现自动化镜像构建及容器部署，提高部署上线效率。
 
+- 根据标签去搜索用户，使用内存查询来优化 SQL 查询，将查询时间由 5956 ms 缩短到 4606 ms。
+
 - 服务器性能为：单机 8 核 16 线程 16G 内存，使用 JMeter 压测工具测试，系统的 QPS（每秒查询率）达到了 235/sec。
 
 ### 工作经历
@@ -120,78 +122,3 @@
 
 1. 有较强的文档阅读能力，曾阅读 Mybatis Plus、Redisson、Spring Cloud Gateway、Dubbo、Etcd 等技术的官方文档自学，并运用到项目中。
 2. 有较强的问题解决能力，能够利用 GitHub Issues 区、AI 工具、搜索引擎、Stack Overflow 等自主解决问题。
-
-
-
-
-
-### 简历
-
-<img src="https://images73.oss-cn-beijing.aliyuncs.com/img/image-20250101223540497.png" alt="image-20250101223540497" style="zoom:80%;" />
-
-
-
-### 打招呼
-
-**1. BOSS您好，我对您发布的岗位很感兴趣。**
-
-**（**首先问个好，表示自己对boss发布的的岗位非常感兴趣）
-
-**2. 本人具有X年XXX相关的工作经验，上一段工作经历是在XXX公司担任XXX。**
-
-(再简要阐述一下自己的工作经验，如果是应届生就换成自己的实习经验）
-
-**3. 主要负责XXXX，XXXX以及XXXX。**
-
-(然后写自己的主要工作内容，我个人认为最好浓缩成3点，多则累赘少又单薄，三点刚刚好。
-
-注意！这是整个招呼的精髓部分！HR就是通过这里的key word来决定是否发出面试邀约！
-
-所以要根据岗位JD动态地调整工作内容和内容优先级）
-
-**4. 擅长XXXX，从0到1XXXX，落地XXXX，沉淀相关文档XXX余篇.**
-
-（这里写自己的优势，和上面写的工作内容一样，根据JD动态调整。
-
-既然是优势，那肯定是比较拿得出手的地方，别写什么吃苦耐劳，性格开朗之类的套话，要写人无我有或者人有我精的东西，争取能让HR眼前一亮。
-
-最好是可以量化展示，不知道大家有没有发现量化这个点是贯穿求职面试始终的🤨）
-
-**5. 熟练掌握XXX,XXX,XXX**
-
-（最后写自己掌握的技能，注意不要写了解XX技术，了解就默认是不会，所以最不济也要写熟练掌握。
-
-写的时候除了按照岗位JD的优先级排列，最好把岗位所需的通用技能带上。怎么知道岗位的通用技能呢？可以回看一下我之前的文章《悟了这个求职之道，让你少走三个月弯路》https://articles.zsxq.com/id_rvlerrwew87j.html中提到如何”划考试重点“，这个重点就是岗位要求的通用技能）
-
-***6. 详细情况您可以看下我的简历，期待您的回复！\***
-
-（这一步是放钩子，只要HR来要你的简历了就说明她已经”上钩了“，你上面的招呼让他对你产生了兴趣，地位开始反转了家人们！）
-
-这个时候祭出我们**狂拽炫酷吊炸天的简历**就等着收面试邀约吧~
-
-
-
-您好，我对您发布的岗位很感兴趣。
-
-本人具有半年 Java 后端开发相关的工作经验，上一段工作经历是在公司担任 Java 开发工程师。
-
-做过 API 平台、RPC 框架开发以及交友平台等。主要负责接口的设计及实现，接口的测试以及文档的编写与维护等工作。
-
-擅长阅读官方的文档并将技术运用到项目中；擅长利用搜索引擎、各种网站来找到问题的解决方案。
-
-熟悉 Java 语言，熟悉 JUnit 单元测试；熟悉反射、SPI 机制、动态代理等。
-
-熟悉 SSM + Spring Boot 框架。熟悉 MySQL 数据库及库表设计。
-
-熟悉 Redis，分布式 Session 登录和 Redisson 的分布式锁。
-
-熟悉分布式应用开发，比如 Dubbo RPC 框架、Nacos、Spring Cloud Gateway、Etcd 注册中心等。
-
-熟悉常见业务问题的解决方案，比如缓存预热、定时任务、全局跨域解决、多环境问题解决、API 签名认证、用户权限管理等。
-
-熟悉并实践过多种设计模式、比如工厂模式、策略模式、双检锁单例模式、代理模式等。
-
-熟练使用 IDEA、Git、Markdown 语法、ChatGPT、Swagger、Navicat、浏览器控制台等工具。
-
-详细情况您可以看下我的简历，期待您的回复！
-
